alignright shouldnt affect text align, fixes #60

--- a/style.css
+++ b/style.css
@@ -749,7 +749,6 @@ img.alignnone {
 
 .alignright {
 	float: right;
-	text-align: right;
 }
 
 img.alignleft,
